[package]
name = "untitled_game"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path = "D:\\coding\\Game\\Untitled_Engine"}
rand = "0.7.3"
noise = "0.6.0"

[profile.dev]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true