[package]
name = "game"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path = "../engine"}
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }
pixels = "0.0.4"
winit = "0.22.0"
winit_input_helper = "0.6.0"
spin_sleep = "1.0.0"